# fork-morph

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGTest.cmake  TestDefs.cmake
src/: CMakeLists.txt  DataProviders.cpp  DataProviders.h  FileReader.cpp  FileReader.h  IChunkProvider.h  Manifest.h  ManifestDiff.cpp  ManifestDiff.h  ManifestReader.cpp  ManifestReader.h  Morph.cpp  Morph.h  S3.h  main.cpp  minio.sh
src/data/.minio.sys/: format.json
src/data/.minio.sys/tmp/.trash/2e6e6e61-b1e4-43a3-a2df-a8fedd07e01b/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/35b7fa9d-90b4-43c7-99db-78148de26f18/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/38e8cce3-941c-4a4e-97a0-68a2de3e9d06/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/3c6ca17a-6d69-464e-979b-4da6aea31666/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/4f9fcab0-0286-4f6a-a812-0c955f3b32ce/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/63cd9083-242a-4402-a3de-c36d8b8bed4a/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/a0f27a05-df8b-4c06-b8cc-d0ab77814ae2/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/a84fdf0e-74d7-42e9-8dce-8204fef1f7de/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/a9d93726-3be5-4584-bc1b-d771b7c15d92/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/ac3cd2ae-f3da-4c44-b263-16117c6d0f1e/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/b988d13c-2748-4fb6-8cf5-5f049d515ba5/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/cbe91c4c-e042-4d09-b446-b66117ea9ac3/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/ccc590bb-78af-48e9-b2d4-45662cee8e86/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/d83d5909-029e-4cee-bf37-5eaac39ccd8f/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/e5019d44-ffa8-4060-8838-194b591eb15a/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/ee9621b5-7043-4922-8d1b-a23d273fdd8f/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/efae6cae-c2ae-433d-86ed-93e687f3586b/: xl.meta.bkp
src/data/.minio.sys/tmp/.trash/f41da187-283b-43e8-b727-ea1019c323c0/: xl.meta.bkp
src/data/bucket/BaranovDaniilAntiplagiarism.pdf/fbe06525-0464-4b6c-88f4-018e6c929fdc/: part.1
tests/: CMakeLists.txt  morph.cpp  unit_helloworld.cpp  unit_manifestdiff.cpp
tests/contrib/: gmock-gtest-all.cc
